public/css/style2.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}
:root {
  --white-color: #fff;
  --blue-color: #4070f4;
  --grey-color: #616161;
  --grey-color-dark: #505050;
}
body {
  background-color: #e7f2fd;
  transition: all 0.5s ease;
}
body.dark {
  background-color: #333;
}
body.dark {
  --white-color: #222;
  --blue-color: #4070f4;
  --grey-color: #f0f0f0;
  --grey-color-dark: #fff;
}
/* Pre css */
.flex {
  display: flex;
  align-items: center;
}
.nav_image {
  display: flex;
  min-width: 55px;
  justify-content: center;
}
.nav_image img {
  height: 35px;
  width: 35px;
  border-radius: 50%;
  object-fit: cover;
}

/* Navbar */

.navbar {
    position: fixed;
    top: 0;
    width: 100%;
    left: 0;
    background-color: var(--white-color);
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 15px 30px;
    z-index: 1000;
    box-shadow: 0 0 2px var(--grey-color-light);
  }
  .navbar .logo_item {
    display: flex;
    align-items: center;
    column-gap: 10px;
    font-size: 24px;
    font-weight: 500;
    color: var(--blue-color);
  }
  .navbar img {
    width: 35px;
    height: 35px;
    border-radius: 50%;
  }
  .navbar_content {
    display: flex;
    align-items: center;
    column-gap: 25px;
  }
  .navbar_content i {
    cursor: pointer;
    font-size: 28px;
    color: var(--grey-color);
  }
  .navbar .button{
    font-size: 15px;
    font-weight: 600;
    height: 40px;
  }

/* Sidebar */
.sidebar {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 18%;
  background: var(--white-color);
  padding: 40px 10px;
  box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
  transition: all 0.4s ease;
}
.sidebar .menu_container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-top: 40px;
  overflow-y: auto;
  height: calc(100% - 35px);
}

.sidebar .menu_title {
  position: relative;
  height: 20px;
  width: 55px;
}
.sidebar .menu_title .title {
  margin-left: 15px;
  color: var(--grey-color-dark);
  font-weight: 600;
}

.sidebar .item {
  list-style: none;
}
.sidebar .link {
  text-decoration: none;
  border-radius: 8px;
  margin-bottom: 8px;
  color: var(--grey-color);
}
.sidebar .link:hover {
  color: #fff;
  background-color: var(--blue-color);
}

.sidebar .active .link{
  text-decoration: none;
  border-radius: 8px;
  margin-bottom: 8px;
  color: #fff;
  background-color: var(--blue-color);
}

.sidebar .link span {
  white-space: nowrap;
}
.sidebar .link i {
  height: 50px;
  min-width: 55px;
  display: flex;
  font-size: 22px;
  align-items: center;
  justify-content: center;
  border-radius: 4px;
}

.sidebar .sidebar_profile {
  padding-top: 30px;
  margin-top: 30px;
  gap: 30px;
  border-top: 3px solid var(--grey-color);
}
.sidebar .sidebar_profile .name {
  font-size: 18px;
  color: var(--grey-color);
}
.sidebar .sidebar_profile .role {
  font-size: 15px;
  color: var(--grey-color);
}

/*Search*/
.content{
  align-items: center;
  align-content: center;
  margin-left: 17%;
  margin-top: 5%;
  transition: all .5s ease;
  overflow-x: hidden;
}

.content-search{
  height: 28%;
  width: 91%;
  margin-left: 5%;
  padding-top: 1%;
  background-color: #fff;
  border-radius: 10px;
  color: #fff;
  font-size: 18px;
  transition: all 0.5s;
}

.button{
  width: 80px;
  padding: 0px 5px;
  min-height: 32px;
  border: none;
  color: #fff;
  font-size: 1.3rem;
  font-weight: 700;
  letter-spacing: 1px;
  border-radius: 4px;
  background-color: var(--blue-color);
  transition: all 0.3s ease;
}

.button:hover{
  background-color: #1b52e8;
}

.red{
  background-color: rgb(227, 0, 0);
}

.table .red:hover{
  background-color: rgb(211, 1, 1);
}



.content .button{
  width: 200px;
  height: 38px;
  margin: 2% 0px;
  font-size: 18px;
}

.search{
  width: 100%;
  padding-left: 2%;
  height: 35%;
}

.search form .fields .input-field{
  display: flex;
  width: 450px;
  flex-direction: column;
  margin: 1% 0;
  padding-right: 50px;
}

.search form .fields .button{
  margin-top: 15%;
  margin-left: 20%;
  padding: 0px 40px;
  height: 45px;
}

.search form .fields .button:hover{
  background-color: #1b52e8;
}

.search .input-field label{
  font-size: 1rem;
  font-weight: 500;
  color: #2e2e2e;
}
.search .input-field input, select{
  outline: none;
  font-size: 14px;
  font-weight: 400;
  color: #333;
  border-radius: 5px;
  border: 2px solid #aaa;
  padding: 0 15px;
  height: 42px;
  margin: 8px 0;
}


/*detail card*/

.detail-wrapper{
  width: 101%;
  margin-top: 5%;
}

.detail-card{
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  align-items: flex-start;
  padding: 15px 25px;
  margin: 1% 5%;
  background-color: var(--blue-color);
  border-radius: 10px;
  height: 7rem;
  color: #fff;
  font-size: 18px;
  transition: all 0.5s;
}

.detail-card:hover{
  background-color: #1b52e8;
}

.detail-card-content{
  width: 50%;
}

.detail-loc .detail-details{
  font-size: 20px;
}

.detail-details{
  display: flex;
  flex-wrap: wrap;
  padding-top: 30px;
}

.detail-details p{
  display: flex;
  padding-right: 15px;
  align-items: center;
  
}

.detail-title{
  font-size: 1.7rem;
  font-weight: 800;
}
.detail-comp{
  font-size: 1.3rem;
  font-weight: 500;
}

.detail-details i{
  padding-right: 5px;
}

.detail-card-sub{
  display: flex;
  width: 30%;
}
.detail-card-info{
  padding: 2% 0;
  font-size: 1.3rem;
  padding-left: 8%;
  color: #fff;
  font-weight: 300;
}

.detail-location{
  font-size: 1.5rem;
  font-weight: 700;
}

.detail-view{
  display: flex;
}

.detail-view .button{
  height: 50px;
  width: 175px;
  margin-left: 5%;
  margin-top: 8%;
  background-color: #fff;
  color: #1b52e8;
}

.detail-view .button:hover{
  background-color: #f0f0f0;
}

.detail-view .button i{
  height: 30px;
}

.detail-btn{
  width: 155px;
}

.vertical-line {
  height: 80px;
  border: none; 
  border-left: 3px solid #fff; 
  margin: 0; 
  padding: 0; 
}


/*Table*/
.table-wrap{
  margin-top: 0px;
}
.table-container{
  width: 91%;
  margin-left: 5%;
  padding: 15px;
  background: #fff;
  border-radius: 10px;

}

.table-container h2{
  font-size: 18px;
}

.table{
  border-collapse: collapse;
  margin: 10px 0;
  font-size: 16px;
  font-weight: 500;
  min-width: 100%;
  overflow: hidden;
  border-radius: 5px;
}

table thead tr{
  color: #1b52e8;
  text-align: left;
  font-weight: 500;
  font-size: 18px;
}

.table td{
  color: #222;
}

.table th, .table td{
  padding: 12px 20px;
  text-align: center;
}

.table tbody tr{
  border-bottom: 1px solid #222;
}
.table tbody tr:nth-last-of-type(even){
  background: #c9d8ff;
}
.table tbody tr.active{
  font-weight: 600;
  color: #0e0136;
  background-color: #222
}
.table tbody tr:last-of-type{
  border-bottom: 2px solid #222
}
.table-container .button{
  width: 130px;
  font-size: 15px;
  max-height: 40px;
}

.table-container .button:hover{
  background-color: #1b52e8;
}


/*Dashboard*/

.table-dashboard{
  border-collapse: collapse;
  margin: 5px 0;
  font-size: 16px;
  font-weight: 500;
  min-width: 100%;
  overflow: hidden;
  border-radius: 5px;
}

.table-dashboard td{
  color: #222;
  text-align: center;
}

.table-dashboard th, .table td{
  padding: 12px 20px;
  text-align: center;
}

.dashboard-type{
  display: flex;
  flex-direction: row;
}

.visualization{
  margin: 0 5%;
}

.dashboard-content{
  display: flex;
  justify-content: space-between;
}

.dashboard-stat{
  color: #4070f4;
  font-size: 30px;
  font-weight: 800;
  text-align: center;
  margin-left: 30px;
}
.dashboard-stat-title{
  text-align: left;
  color: #2e2e2e;
  font-size: 18px;
  font-weight: 600;
}

.dashboard-row{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 2% 0;
}

.test{
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  margin: 2% 0;
}
.test .button{
  font-size: 18px;
  font-weight: 700;
  width: 200px;
  min-height: 60px;
}


/*Edit Container*/
.container-edit{
  max-width: 430px;
  width: 100%;
  background: #fff;
  border-radius: 10px;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
  overflow: hidden;
  margin: auto;
}

.container-edit .forms{
  display: flex;
  align-items: center;
  height: 550px;
  width: 200%;
  transition: height 0.2s ease;
}


.container-edit .form{
  width: 50%;
  padding: 30px;
  background-color: #fff;
  transition: margin-left 0.18s ease;
}


.container-edit .signup{
  opacity: 0;
  transition: opacity 0.09s ease;
}

.container-edit .form .title{
  position: relative;
  font-size: 27px;
  font-weight: 600;
}


.container-edit .form .input-field{
  position: relative;
  height: 50px;
  width: 100%;
  margin-top: 30px;
}

.container-edit .input-field input, select{
  outline: none;
  width: 100%;
  font-size: 14px;
  font-weight: 400;
  color: #333;
  border-radius: 5px;
  border: 2px solid #aaa;
  padding: 0 15px;
  height: 42px;
  margin: 0;
}

.container-edit .input-field input.error{
  border: 2px solid #ff0e0e;
}

.container-edit .input-field input:is(:focus, :valid){
  border-color: #4070f4;
}
.container-edit .input-field input.error:is(:focus, :valid){
  border-color: #ff0e0e;
}

.container-edit .input-field i{
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  color: #999;
  font-size: 23px;
  transition: all 0.2s ease;
}

.container-edit .checkbox-text .checkbox-content{
  display: flex;
  align-items: center;
}

.container-edit .checkbox-content input{
  margin-right: 10px;
  accent-color: #4070f4;
}

.container-edit .form .text{
  color: #333;
  font-size: 14px;
}

.container-edit .form .button{
  margin-top: 35px;
}

.container-edit .form .button input{
  border: none;
  color: #fff;
  font-size: 17px;
  font-weight: 700;
  letter-spacing: 1px;
  border-radius: 10px;
  background-color: #4070f4;
  cursor: pointer;
  transition: all 0.5s ease;
}

.container-edit .button input:hover{
  background-color: #265df2;
}

.container-edit .form .login-signup{
  margin-top: 30px;
  text-align: center;
}


/*Profile*/
.profile-img img{
  width: 150px;
  border-radius: 50%;
}

.table-dashboard .profile td{
  text-align: left;
  margin: 10px 0;
}

